# quili

./: .gitignore  README.md  config.py  license.txt  pyproject.toml
data/: user.json
data/subjects/: act-math.json
src/: cli.py  models.py  session.py  storage.py  views.py
