[project]
name = "QuiLI"
version = "0.2.0"
description = "Create and take quizzes in the terminal."
requires-python = ">=3.8"
dependencies = [
    "click>=8.3.0",
    "rich>=14.0",
    "matplotlib>=3.10.6",
    "PyQt5>=5.15.11"
]
license = "MIT"
authors = [
    { name = "Megan Renae", email = "meganrenae21@gmail.com"}
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "setuptools>=80.9.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config", ".", "src*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -vv"
testpaths = [
    "tests"
]

[project.scripts]
quili = "src.cli:quili"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"



